objects/geopointe__GP_Daily_Report_Summary__c.object
<CustomObject>
    <fields>
        <fullName>geopointe__Check_In_Count__c</fullName>
        <label># of Check Ins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Check_Out_Count__c</fullName>
        <label># of Check Outs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date this summary is for.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>geopointe__Total_Expected_Travel_Distance_km__c</fullName>
        <label>Total Expected Travel Distance (km)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Total_Expected_Travel_Distance_mi__c</fullName>
        <label>Total Expected Travel Distance (mi)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Total_Time_On_Site__c</fullName>
        <inlineHelpText>The time in minutes from first summarized Check In to last Check Out, minus total time spent between Check In stops.</inlineHelpText>
        <label>Total Time On Site</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Total_Time_min__c</fullName>
        <inlineHelpText>The time in minutes from first summarized Check In to last Check Out.</inlineHelpText>
        <label>Total Time (min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Total_Travel_Distance_Mi__c</fullName>
        <label>Total Travel Distance (mi)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Total_Travel_Distance_km__c</fullName>
        <label>Total Travel Distance (km)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GP_Daily_Report_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Geopointe Daily Summary</label>
    <listViews>
        <fullName>geopointe__All</fullName>
        <columns>NAME</columns>
        <columns>geopointe__User__c</columns>
        <columns>geopointe__Date__c</columns>
        <columns>geopointe__Check_In_Count__c</columns>
        <columns>geopointe__Check_Out_Count__c</columns>
        <columns>geopointe__Total_Expected_Travel_Distance_km__c</columns>
        <columns>geopointe__Total_Expected_Travel_Distance_mi__c</columns>
        <columns>geopointe__Total_Travel_Distance_km__c</columns>
        <columns>geopointe__Total_Travel_Distance_Mi__c</columns>
        <columns>geopointe__Total_Time_min__c</columns>
        <columns>geopointe__Total_Time_On_Site__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DCIS-{00000000}</displayFormat>
        <label>Daily Check In Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geopointe Daily Summaries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>